# FUFIRE_API_lunar

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_DE.md  ASTROLOGICAL_ANALYSIS_DE.md  BAFE-Engine-POST_REQUEST_SCHEMA.md  BAFE-Engine_RESPONDS_GET.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRACT.md  Dockerfile  Dockerfile.ephe-base  ELEVENLABS_SETUP.md  PERFORMANCE_ANALYSIS_DE.md  README.md  SDLC.md  ephemeris.lock.json  fufire_api_fixing_plan_tdd.md  package-lock.json  package.json  pyproject.toml  railway.toml  release-please-config.json  start.py  strategy_decision.md
.claude/commands/: agent-proof-api.md  bafe-deploy.md  bafe-patch.md  fufire-openapi-sync.md  fufire-status.md  (+1 more)
.github/: dependabot.yml
3-code/: CLAUDE.code.md  tasks.md
bazi_engine/: __init__.py  app.py  aspects.py  auth.py  bazi.py  bazi_rules.py  chronometry.py  cli.py  config_guard.py  constants.py  decanates_terms.py  dignities.py  ephemeris.py  error_handlers.py  exc.py  features.py  fixed_stars.py  fusion.py  impact.py  impact_harmony.py  impact_resonance.py  impact_types.py  jieqi.py  key_store.py  limiter.py  lunar_state.py  middleware.py  narrative.py  openapi_ext.py  provenance.py  resource_loader.py  solar_time.py  time_context.py  time_utils.py  transit.py  types.py  western.py
docs/: API_REFERENCE.md  BAFE-architecture.txt  ERROR_CODES.md  ITERATION-Stabilization050326.txt  REPORT-Stabilization050326.md  REPO_ANALYSIS_DE.md  adding-an-endpoint.md  b2b_api_standards.md  calibration-results.json  fufire-domain-ownership.traceability.md  railway.md  traceability.md  validate_contract.md
hardening/: ein_wissenschaftlich_korrekter_testaufbau_muss_zue.md
metrics/: system-metrics.json
reports/: western_validation_report.md  western_validation_summary.json
scripts/: assert_toolchain_versions.py  benchmark_performance.py  build_release_evidence.py  calibrate_baselines.py  check_complexity.py  distribution_smoke.py  export_bazi_baseline.py  export_openapi.py  fetch_ephemeris.py  generate_api_key.py  live_smoke.sh  prepare-openapi-codegen-spec.mjs  resume_point.py  validate_live_production_gates.py  validate_release_readiness_artifacts.py  validate_sbom.py  verify_distribution.py  western_reference_validation.py
spec/: FUFIRE_SPRINT_PLAN_AGENT_BRIEF.md  FuFirE_Addendum_v1.md  FuFirE_B2B_Sprint_Plan_v1.docx  FuFirE_Product_Roadmap_v1.md  FuFirE_Rebranding_Dev_Brief_v1.md  README.md  bazodiac_spec_master.md  changelog.md
tests/: conftest.py  golden_reference_cases.py  mock_server.py  test_affinity_derivation.py  test_affinity_integration.py  test_api.py  test_app_composition.py  test_aspects.py  test_aspects_negative.py  test_attestation_contract.py  test_b2b_api_audit.py  test_b2b_infra.py  test_bazi_baseline_dst_fold.py  test_bazi_baseline_inventory.py  test_bazi_day_anchor_invariants.py  test_bazi_derivation_trace_typed.py  test_bazi_golden_case_schema.py  test_bazi_rules.py  test_bazi_time_context.py  test_bazi_tlst_hour_pillar.py  test_bazi_trace_endpoint.py  test_bazi_wuxing_endpoint.py  test_bazi_zi_day_boundary.py  test_birth_time_known_opt_in.py  test_calibration.py  test_calibration_simulation.py  test_chart.py  test_chart_lifecycle_contract.py  test_chronometry_endpoint.py  test_chronometry_frame.py  test_constants.py  test_contribution_ledger.py  test_daily_chart_type_quality_surfaced.py  test_daily_eastern.py  test_daily_eastern_jieqi.py  test_daily_fusion.py  test_daily_templates.py  test_daily_western.py  test_dayun_constants_sync.py  test_dayun_current_cycle.py  (+147 more)
tools/: affinity_descriptions.json  affinity_math.py  derive_affinity.py  leandeep_client.py  load_existing_map.py  sector_vad.py
(+721 files in other folders)
